--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "breakpoint-sass": "^2.7.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-asset-cache": "^1.1.4",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-filter": "^5.0.0",
+    "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^3.0.0",
